After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 704759 - Tiling preview stuck when clicking right button while moving windows
Tiling preview stuck when clicking right button while moving windows
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
git master
Other Linux
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2013-07-23 16:54 UTC by Lionel Landwerlin
Modified: 2013-10-14 11:48 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
window: don't process unrelated release events (4.68 KB, patch)
2013-07-23 16:58 UTC, Lionel Landwerlin
committed Details | Review
display: don't interrupt grab move/resize without modifiers (1.13 KB, patch)
2013-07-23 16:58 UTC, Lionel Landwerlin
committed Details | Review

Description Lionel Landwerlin 2013-07-23 16:54:58 UTC
When moving a window around, if you reach the left edge of the screen, you will get a tiling preview showing how the window can be maximized.
If you do a right click while still maintaing the left button, you will get the window popup menu and it will leave the tiling preview in an incoherent state.

https://www.youtube.com/watch?v=3spRdi3spfQ
Comment 1 Lionel Landwerlin 2013-07-23 16:58:28 UTC
Created attachment 249924 [details] [review]
window: don't process unrelated release events
Comment 2 Lionel Landwerlin 2013-07-23 16:58:53 UTC
Created attachment 249925 [details] [review]
display: don't interrupt grab move/resize without modifiers
Comment 3 Philippe "RzR" Coval 2013-10-02 13:54:42 UTC
I confirm this issue also appear on latest release 3.8.4 of mutter, review is welcome ...
Comment 4 Matthias Clasen 2013-10-02 23:03:14 UTC
yeah, stuck previews have been around for a long time - very annoying.
Comment 5 manuel.BACHMANN@eurogiciel.fr 2013-10-11 15:11:52 UTC
(In reply to comment #2)
> Created an attachment (id=249925) [details] [review]
> display: don't interrupt grab move/resize without modifiers

I can confirm the submitted patch works with latest branch gnome-3-8. Doing, for instance, a right-click now releases the grab.
Comment 6 Jasper St. Pierre (not reading bugmail) 2013-10-11 15:16:28 UTC
Review of attachment 249924 [details] [review]:

OK.
Comment 7 Jasper St. Pierre (not reading bugmail) 2013-10-11 15:16:59 UTC
Review of attachment 249925 [details] [review]:

::: src/core/display.c
@@ +2350,3 @@
           if ((window &&
                meta_grab_op_is_mouse (display->grab_op) &&
+               device_event->mods.effective & display->window_grab_modifiers &&

Add parens around this to make it clearer.
Comment 8 Lionel Landwerlin 2013-10-13 01:01:20 UTC
Comment on attachment 249924 [details] [review]
window: don't process unrelated release events

Pushed to master.
Comment 9 Lionel Landwerlin 2013-10-13 01:01:53 UTC
Comment on attachment 249925 [details] [review]
display: don't interrupt grab move/resize without modifiers

Pushed to master with the requested modification.
Comment 10 manuel.BACHMANN@eurogiciel.fr 2013-10-14 11:48:48 UTC
Nice !
Would it be possible to push it to the gnome-3-8 branch, too ? I tested it with the two codebases, it works.